applications/backbone/gateway/kgateway-main-gateway/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: kgateway
spec:
  gatewayClassName: kgateway-main
  allowedListeners:
    namespaces:
      from: All
  listeners:
  - protocol: HTTP
    port: 80
    name: http
    allowedRoutes:
      namespaces:
        from: All
  - protocol: HTTPS
    port: 443
    name: https
    tls:
      mode: Terminate
      certificateRefs:
      - kind: Secret
        group: ""
        name: hackcorp-host-secret
        namespace: cert-manager
      - kind: Secret
        group: ""
        name: yewolf.fr
        namespace: cert-manager
      - kind: Secret
        group: ""
        name: uctf.io
        namespace: uctf
    allowedRoutes:
      namespaces:
        from: All
