applications/backbone/gateway/kgateway-main-gateway/http-to-https.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-to-https-redirect
spec:
  parentRefs:
  - name: kgateway
    sectionName: http
  hostnames:
  - "*.hackcorp.net"
  - "hackcorp.net"
  - "*.yewolf.fr"
  - "yewolf.fr"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: "/"
    filters:
    - type: RequestRedirect
      requestRedirect:
        scheme: https
        statusCode: 308
